--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.4'
-
 services:
   rabbitmq:
     image: rabbitmq:3-management
@@ -7,9 +5,9 @@ services:
       - "5672:5672"
       - "15672:15672"
       
-  progressservice:
+  applyservice:
     build:
-      context: ./ProgressService
+      context: ./ApplyService
       dockerfile: Dockerfile
     ports:
       - "5001:8080"
