--- a/ProgressService/Dockerfile
+++ b/ProgressService/Dockerfile
@@ -21,5 +21,5 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /App
 COPY --from=build-env /App/out .
-ENTRYPOINT ["dotnet", "ProgressService.dll"]  
+ENTRYPOINT ["dotnet", "ApplyService.dll"]  
 
