--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,6 @@ services:
     links:
       - rabbitmq
       - sqlserver
-    command: echo "HI"
     networks:
       - mynetwork
     healthcheck:
@@ -54,8 +53,10 @@ services:
       - "5002:8080"
     restart: on-failure
     depends_on:
-      - rabbitmq
-      - sqlserver
+      rabbitmq:
+        condition: service_healthy
+      sqlserver:
+        condition: service_healthy
     links:
       - rabbitmq
       - sqlserver 
@@ -63,6 +64,26 @@ services:
       - mynetwork
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5002/health"]
+
+  studentservice:
+    build:
+      context: .
+      dockerfile: ./StudentService/Dockerfile
+    ports:
+      - "5003:8080"
+    restart: on-failure
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      sqlserver:
+        condition: service_healthy
+    links:
+      - rabbitmq
+      - sqlserver 
+    networks:
+      - mynetwork
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5003/health"]
 
 networks:
   mynetwork:
