--- a/ApplyService.Domain/ApplyService.Domain.csproj
+++ b/ApplyService.Domain/ApplyService.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <PackageReference Include="MassTransit" Version="8.2.2" />
   </ItemGroup>
 
 </Project>
