--- a/InterviewService/InterviewService.csproj
+++ b/InterviewService/InterviewService.csproj
@@ -20,9 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DomainServices\DomainServices.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\EventLibrary\EventLibrary.csproj" />
   </ItemGroup>
 
 </Project>
