--- a/MeetingService.Domain/MeetingService.Domain.csproj
+++ b/MeetingService.Domain/MeetingService.Domain.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="MassTransit" Version="8.2.2" />
   </ItemGroup>
 
-
+  <ItemGroup>
+    <Folder Include="Events\" />
+  </ItemGroup>
 
 </Project>
