--- a/TeacherService/appsettings.json
+++ b/TeacherService/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sqlserver,1433;Database=AvantysStudents;User Id=SA;Password=Passw0rd;Encrypt=True;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
+
