--- a/ProgressService/appsettings.json
+++ b/ProgressService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sqlserver,1433;Database=AvantysProgress;User Id=SA;Password=Passw0rd;Encrypt=True;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
