--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,26 @@ services:
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5003/health"]
 
+  progressservice:
+    build:
+      context: .
+      dockerfile: ./ProgressService/Dockerfile
+    ports:
+      - "5008:8080"
+    restart: on-failure
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      sqlserver:
+        condition: service_healthy
+    links:
+      - rabbitmq
+      - sqlserver 
+    networks:
+      - mynetwork
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5008/health"]
+
 networks:
   mynetwork:
     driver: bridge
