create interview when applicant is created

--- a/InterviewService/appsettings.json
+++ b/InterviewService/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=sqlserver,1433;Database=AvantysInterviews;User Id=SA;Password=Passw0rd;Encrypt=True;TrustServerCertificate=True"
+    },
+    "AllowedHosts": "*"
 }
