Called event namespace Eventlibrary

--- a/TestService/TestService.csproj
+++ b/TestService/TestService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -27,7 +27,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\EventLibrary\EventLibrary.csproj" />
 	  <ProjectReference Include="..\TestService.Domain\TestService.Domain.csproj" />
 	</ItemGroup>
 
