--- a/LectureService/appsettings.json
+++ b/LectureService/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver,1433;Database=AvantysLecture;User Id=SA;Password=Passw0rd;Encrypt=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=sqlserver,1433;Database=AvantysLecture;User Id=SA;Password=Passw0rd;Encrypt=True;TrustServerCertificate=True",
+    "EventStoreConnection": "Server=sqlserver,1433;Database=AvantysEventStore;User Id=SA;Password=Passw0rd;Encrypt=True;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
